added a random comment

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <a href="https://smile.gedidigital.it/">Gedi Smile</a>
             </li>-->
             <ul class="p-0">
-            <li>
+            <li> <!--commento a caso-->
                 <a>Sezioni<span></span></a>
                 <div class="container">
                     <div class="row d_flex">
