removed justify-content-end" in "temperature_and_date"

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6 col-xs-12 d-flex flex-row justify-content-end align-items-center p-0" id="temperature_and_date">
+            <div class="col-sm-6 col-xs-12 d-flex flex-row align-items-center p-0" id="temperature_and_date">
                 <div id="data" class="justify-content-end text-right"><!--qui compare la data e ora di oggi--></div>
             </div>
             <div class="col-sm-6 align-items-center p-0">
@@ -352,9 +352,9 @@
                     <button type="submit" class="button_with_icon"><img src="img/search_icon.png" class="buttonElement icon"></button>
                 </form>
                 </div>
-            </div>   
-
+            </div>
         </div>
+
         </div>
         <!--2 menu orizzontali-->
         <div class="container" id="container_interno2">
