added p-0 m-0 in data e meteo

--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
         <div id="div_esterno" class="justify-content-center">
         <!--data e meteo-->
         <div class="row">
-            <div class="d-flex col-sm-12 justify-content-center align-items-center" id="rep_default">
+            <div class="d-flex col-sm-12 justify-content-center align-items-center p-0 m-0" id="rep_default">
             <span id="repubblica" class="p-2">Republic</span>
             </div>
         </div>
-        <div class="row">
+        <div class="row p-0 m-0">
             <div class="col-sm-6 col-xs-12 d-flex flex-row align-items-center p-0" id="temperature_and_date">
                 <div id="data" class="justify-content-end text-right"><!--qui compare la data e ora di oggi--></div>
             </div>
