--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
         </div>
         <div class="row p-0 m-0">
-            <div class="col-sm-6 col-xs-12 d-flex flex-row align-items-center p-0" id="temperature_and_date">
+            <div class="col-sm-6 col-xs-12 d-flex flex-row align-items-center justify-content-end p-0 m-0" id="temperature_and_date">
                 <div id="data" class="justify-content-end text-right"><!--qui  compare la data e ora di oggi--></div>
             </div>
             <div class="col-sm-6 align-items-center p-0">
