--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
                 
                 <!--pubblicità-->
                     
-                    <div id="ad_1" class="hide_by_default ad">
+                    <div id="ad_2" class="hide_by_default ad">
                         <span class="ad_header">Pubblicità</span>
                         <article>Prova il nuovo rossetto..
                             <figure>
@@ -929,7 +929,7 @@
                     <!--editoriali-->
                     <section>
                     <div id="editoriale">
-                        <div class="div_editoriale_main text-center"><h1>Editoriali & Commenti</h1></div>
+                        <div class="div_editoriale_main text-center"><h1>Editoriali & Commenti</h1></div></div>
                     </section>
                     <section>
                         <div class="div_editoriale"><h2>L'analisi</h2></div>
