--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
             <div class="col-sm-4 col-xs-12 d-flex flex-column pubblicità">
             <div class="row">
                 <div class="col-sm-12 col-xs-12 text-center" id="colonna_interno_right">
-                    <div id="ad_0" class="ad">
+                    <div id="ad_0" class="ad hide_by_default">
                         <span class="ad_header">Pubblicità</span>
                         <article>40% per i nuovi acquirenti..
                             <figure>
