--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                         <div><a href="...">Un commento sulle unioni civili</a></div>
                     </section>
                     <!--blocco di ads-->
-                    <div id="ad_7">
+                    <div id="ad_7" class="hide_by_default">
                         <div class="ad">
                             <h1 class="p_header"></h1>
                             <article>Apre a Milano il negozio..
